fix text body sm align

--- a/home/style.css
+++ b/home/style.css
@@ -79,8 +79,7 @@ h4 {
   font-size: 1.07em;
   font-weight: 400;
   line-height: 1.6;
-  letter-spacing: 0;
-  text-align: center;
+  letter-spacing: 0;  
 }
 
 .lora {
